# connectedhomeip

./: .gitmodules
data_model/clusters/: Scenes.xml
data_model/device_types/: ColorTemperatureLight.xml  DimmableLight.xml  DimmablePlug-InUnit.xml  ExtendedColorLight.xml  OnOffLight.xml  OnOffPlug-inUnit.xml
examples/air-quality-sensor-app/silabs/: BUILD.gn
examples/all-clusters-app/all-clusters-common/: BUILD.gn  all-clusters-app.matter  all-clusters-app.zap
examples/all-clusters-app/esp32/main/: CMakeLists.txt
examples/all-clusters-app/linux/: args.gni
examples/all-clusters-minimal-app/all-clusters-common/: all-clusters-minimal-app.matter  all-clusters-minimal-app.zap
examples/all-clusters-minimal-app/linux/: args.gni
examples/chef/devices/: template.zap
examples/chef/efr32/: BUILD.gn
examples/chef/silabs/: BUILD.gn
examples/chip-tool/commands/dcl/: HTTPSRequest.cpp
examples/closure-app/silabs/: BUILD.gn
examples/dishwasher-app/silabs/: BUILD.gn
examples/energy-management-app/silabs/: BUILD.gn  README.md  build_for_wifi_args.gni  openthread.gni
examples/energy-management-app/silabs/include/: AppConfig.h
examples/energy-management-app/silabs/src/: AppTask.cpp
examples/energy-management/device-energy-management/: BUILD.gn
examples/energy-management/device-energy-management/include/: DEMConfig.h
examples/energy-management/device-energy-management/src/: device-energy-management-mode.cpp
examples/energy-management/electrical-sensor/: BUILD.gn
examples/energy-management/tests/: BUILD.gn
examples/energy-management/util/: BUILD.gn
examples/evse-app/energy-management-triggers/: DEMTestEventTriggers.cpp  FakeReadings.cpp
examples/evse-app/evse-common/: BUILD.gn
examples/evse-app/evse-common/include/: ChargingTargetsMemMgr.h  EnergyEvseDelegateImpl.h  EnergyEvseTargetsStore.h  EnergyManagementAppCommonMain.h
examples/evse-app/evse-common/src/: ChargingTargetsMemMgr.cpp  EVSEManufacturerImpl.cpp  EnergyEvseDelegateImpl.cpp  EnergyEvseMain.cpp  EnergyEvseTargetsStore.cpp  EnergyManagementAppCommonMain.cpp  energy-evse-mode.cpp
examples/evse-app/evse-common/tests/: BUILD.gn
examples/evse-app/linux/: BUILD.gn  README.md
examples/evse-app/silabs/: .gn  BUILD.gn  README.md  with_pw_rpc.gni
examples/evse-app/silabs/src/: AppTask.cpp
examples/light-switch-app/light-switch-common/: light-switch-app.matter
examples/light-switch-app/silabs/: BUILD.gn  openthread.gni
examples/light-switch-app/silabs/efr32/: BUILD.gn
examples/light-switch-app/silabs/src/: AppTask.cpp  ShellCommands.cpp
examples/lighting-app/lighting-common/: lighting-app.matter  lighting-app.zap
examples/lighting-app/silabs/: BUILD.gn  openthread.gn  openthread.gni
examples/lighting-app/silabs/data_model/: lighting-thread-app.matter  lighting-thread-app.zap  lighting-wifi-app.matter  lighting-wifi-app.zap
examples/lighting-app/silabs/efr32/: BUILD.gn
examples/lighting-app/silabs/include/: LightingManager.h
examples/lit-icd-app/silabs/: BUILD.gn
examples/lock-app/silabs/: BUILD.gn
examples/lock-app/silabs/efr32/: BUILD.gn
examples/lock-app/silabs/include/: LockManager.h
examples/lock-app/silabs/src/: AppTask.cpp  LockManager.cpp
examples/platform/silabs/: BaseApplication.cpp  BaseApplication.h  FabricTableDelegate.cpp  FabricTableDelegate.h  MatterConfig.cpp  SoftwareFaultReports.cpp  uart.cpp
examples/platform/silabs/efr32/: BUILD.gn  BaseApplication.cpp  matter_config.cpp
examples/platform/silabs/ldscripts/: efr32mg24-clang.ld  efr32mg26-clang.ld  mgm24-clang.ld
examples/platform/silabs/platform-app/: README.md
examples/platform/silabs/shell/: BUILD.gn
examples/pump-app/silabs/: BUILD.gn
examples/refrigerator-app/silabs/: BUILD.gn
examples/smoke-co-alarm-app/silabs/: BUILD.gn
examples/thermostat/nxp/zap/: thermostat_matter_thread.matter  thermostat_matter_thread.zap  thermostat_matter_wifi.matter  thermostat_matter_wifi.zap
examples/thermostat/silabs/: BUILD.gn
examples/thermostat/silabs/efr32/: BUILD.gn
examples/virtual-device-app/virtual-device-common/: virtual-device-app.matter  virtual-device-app.zap
examples/water-heater-app/esp32/: CMakeLists.txt  README.md
examples/water-heater-app/esp32/main/: CMakeLists.txt  main.cpp
examples/water-heater-app/linux/: BUILD.gn  README.md  main.cpp
examples/water-heater-app/silabs/: BUILD.gn  README.md
examples/water-heater-app/silabs/include/: AppConfig.h  CHIPProjectConfig.h
examples/water-heater-app/water-heater-common/: BUILD.gn
examples/window-app/silabs/: BUILD.gn
examples/window-app/silabs/efr32/: BUILD.gn
precommission/: active_dataset_codec.py  network_info_codec.py  networkinfo-light.yaml  networkinfo-switch.yaml  precommission.py  provisioning-config-light.yaml  provisioning-config-switch.yaml
scripts/examples/: gn_efr32_example.sh  gn_silabs_example.sh
scripts/tests/: local.py  run_test_suite.py
scripts/tests/chiptest/: __init__.py  test_definition.py
src/: BUILD.gn
src/app/: CommandHandler.cpp  chip_data_model.gni  zap_cluster_list.json
src/app/reporting/: ReportScheduler.h  SynchronizedReportSchedulerImpl.cpp
src/app/scenes_storage/: SceneTable.h
src/app/tests/: BUILD.gn  TestSceneTable.cpp
src/controller/: CHIPDeviceController.cpp
src/controller/data_model/: controller-clusters.matter  controller-clusters.zap
src/lib/core/: BUILD.gn  CHIPConfig.h  core.gni
src/lib/support/: CodeUtils.h
src/platform/OpenThread/: GenericThreadStackManagerImpl_OpenThread.cpp  GenericThreadStackManagerImpl_OpenThread.hpp
src/platform/silabs/: BLEManagerImpl.h  CHIPDevicePlatformEvent.h  DiagnosticDataProviderImpl.cpp  Logging.cpp  SilabsConfig.cpp  ThreadStackManagerImpl.h
src/platform/silabs/efr32/: BLEManagerImpl.cpp  BUILD.gn  OTAImageProcessorImpl.cpp  ThreadStackManagerImpl.cpp  thread_direct.gni
src/python_testing/: TC_CC_10_1.py
src/test_driver/efr32/: BUILD.gn
src/transport/: SessionManager.cpp
zzz_generated/lighting-app/zap-generated/: Clusters.matter  IMClusterCommandHandler.cpp  callback-stub.cpp  endpoint_config.h  gen_config.h
(+119 files in other folders)
