# Copyright (c) 2026 Project CHIP Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
declare_args() {
  sl_use_thread_direct = false

  chip_openthread_thread_direct_wake_initiator_enable = false
  chip_openthread_thread_direct_wake_listener_enable = false
}
thread_direct_defines = []

if (sl_use_thread_direct) {
  thread_direct_defines += [
    "SL_USE_THREAD_DIRECT=1",
    "OPENTHREAD_CONFIG_PLATFORM_USEC_TIMER_ENABLE=1",
  ]

  if (chip_openthread_thread_direct_wake_initiator_enable) {
    thread_direct_defines +=
        [ "OPENTHREAD_CONFIG_THREAD_DIRECT_WAKE_INITIATOR_ENABLE=1" ]
  } else {
    thread_direct_defines +=
        [ "OPENTHREAD_CONFIG_THREAD_DIRECT_WAKE_INITIATOR_ENABLE=0" ]
  }

  if (chip_openthread_thread_direct_wake_listener_enable) {
    thread_direct_defines +=
        [ "OPENTHREAD_CONFIG_THREAD_DIRECT_WAKE_LISTENER_ENABLE=1" ]
  } else {
    thread_direct_defines +=
        [ "OPENTHREAD_CONFIG_THREAD_DIRECT_WAKE_LISTENER_ENABLE=0" ]
  }
}
